methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:6: error: value Yellow is not a member of object java.awt.Color
  U(Color.GREEN,Color.Yellow)
                      ^PatternPicture:23: error: not enough arguments for method marquage: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  gauche();avance();marquage();recule();droite()
                            ^